Fix text overflow issues

--- a/styles.1.0.2.css
+++ b/styles.1.0.2.css
@@ -59,7 +59,8 @@ hr {
 	width: 100%;
 	height: auto;
 	text-align: center;
-	padding: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 #header a {
